--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -25,5 +25,14 @@
             color: $clr-light;
         }
     }
+    &--dark{
+        background-color: $clr-dark;
+        color: $clr-light;
+        border-color: $clr-dark;
+
+        &:hover{
+            background-color: darken($clr-dark, 10);
+        }
+    }
 }
 
