--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -39,25 +39,167 @@
         grid-gap: 2rem;
 
         .product__item{
-            box-shadow: 2px 2px 12px 2px rgba(0,0,0,0.06);
+            box-shadow: $shadow;
             padding: 1.5rem 2rem;
             border-radius: 1rem;
+            position: relative;
+            overflow: hidden;
+            &::before{
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 0;
+                height: 0;
+                background-color: $clr-primary;
+                z-index: -1;
+                transition: .5s ease;
+                
+            }
+            &:hover::before{
+                width: 50%;
+                height: 15rem;
+            }
+            &:hover a {
+                background-color: $clr-primary;
+                color: $clr-light;
+                transition: .5s ease;
+            }
             img{
                 border-radius: 50%;
                 width: 20rem;
                 height: 20rem;
                 margin: 0 auto 3rem;
                 display: block;
+                object-fit: cover;
+            }
+            a{
+                display: block;
+                text-align: center;
             }
 
             .item__info{
                 display: flex;
                 justify-content: space-between;
-                margin-bottom: 2rem;
+                align-items: center;
+                margin-bottom: 1rem;
                 h3{
-                    font-weight: bold;
+                    font-weight: 800;
+                    font-size: 2.5rem;
+                }
+                h4{
+                    font-weight: bolder;
                     font-size: 2rem;
                 }
+                small{
+                    font-weight: bold;
+                    font-size: 1.2rem;
+                    opacity: 0.3;
+
+                }
+            }
+            .item__review{
+                h4{
+                    font-size: 1.4rem;
+
+                    i{
+                        color: $clr-primary;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.product__item.reverse{
+    &::before{
+    left: unset;
+    right: 0;
+    }
+}
+
+.category__tab {
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+
+        border-radius: 3rem;
+        box-shadow: $shadow;
+        max-width: 43rem;
+        width: 100%;
+        margin: 0 auto 6rem;
+        
+        li {
+
+            min-width: 7rem;
+        a {
+            display: block;
+            padding:1rem;
+            text-align: center;
+            border-radius: 3rem;
+            &:hover {
+                background-color: $clr-primary;
+                color: $clr-light;
+            }
+        }
+        }
+        li.active a {
+            background-color: $clr-primary;
+            color: $clr-light;
+        
+        }
+    }
+}
+
+
+
+// BOOKING
+
+.booking{
+    min-height: 50rem;
+    background-image: url(/img/restaurant.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 5rem, 5rem;
+    background-size: fill;
+    &__content{
+        background-color: $clr-primary;
+        color: $clr-light;
+        height: 50rem;
+        width: 50%;
+        position: relative;
+        display: grid;
+        justify-content: flex-start;
+        place-items: center;
+        &::before{
+            content: '';
+            position: absolute;
+            right: 100%;
+            top: 0;
+            height: 100%;
+            width: 40vw;
+            background-color: $clr-primary;
+        }
+        .inner{
+            max-width: 40rem;
+            width: 100%;
+
+            small{
+                color: $clr-dark;
+                text-transform: uppercase;
+                font-weight: 800;
+                font-size: 1.8rem;
+            }
+            h2{
+                font-size: clamp(3rem, 6vw, 5rem);
+                font-weight: bold;
+                margin: 3rem 0;
+            }
+            p{
+                margin-bottom: 3rem;
             }
         }
     }
