--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,9 +14,12 @@
     }
 
     &__nav{
-        
-        ul{
+        @include mediaQuery($mobile){
+            display: none;
+        }
 
+        ul{
+            
             li{
 
                 a{
