--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,19 +3,17 @@
     background-color: $clr-dark;
     color: $clr-light;
     .footer__wrapper{
-        display: grid;
-        grid-template-columns: 1.3fr 1fr 1fr 1fr;
-        grid-gap: 1rem;
+        @include gridUneven(1.3fr 1fr 1fr 1fr, 2rem);
+        @include mediaQuery($mobile){
+            @include gridUneven(1fr, 2rem);
+
+        }
         .footer__item{
             
             h3{
                 text-transform: uppercase;
                 margin-bottom: 3rem;
-                font-weight: bold;
                 font-size: 1.8rem;
-                span{
-                    color: $clr-primary;
-                }
 
             }
             p{
