--- a/scss/main.css
+++ b/scss/main.css
@@ -67,6 +67,13 @@ p {
   margin-bottom: 1rem;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+}
+h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
+  color: #ff9a1e;
+}
+
 .container {
   width: 100%;
   max-width: 120rem;
@@ -456,6 +463,11 @@ p {
 .header .branding a span {
   color: #ff9a1e;
 }
+@media screen and (max-width: 480px) {
+  .header__nav {
+    display: none;
+  }
+}
 .header__nav ul li a {
   position: relative;
 }
@@ -484,16 +496,19 @@ p {
 .footer .footer__wrapper {
   display: grid;
   grid-template-columns: 1.3fr 1fr 1fr 1fr;
-  grid-gap: 1rem;
+  grid-gap: 2rem;
+}
+@media screen and (max-width: 480px) {
+  .footer .footer__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 2rem;
+  }
 }
 .footer .footer__wrapper .footer__item h3 {
   text-transform: uppercase;
   margin-bottom: 3rem;
-  font-weight: bold;
   font-size: 1.8rem;
-}
-.footer .footer__wrapper .footer__item h3 span {
-  color: #ff9a1e;
 }
 .footer .footer__wrapper .footer__item p {
   width: 80%;
@@ -532,6 +547,15 @@ p {
 .banner__wrapper {
   min-height: calc(100vh - 60px);
 }
+@media screen and (max-width: 480px) {
+  .banner__wrapper {
+    flex-direction: column;
+    min-height: auto;
+    justify-content: flex-start;
+    gap: 5rem;
+    margin-top: 5rem;
+  }
+}
 .banner__content {
   max-width: 50rem;
   width: 100%;
@@ -540,10 +564,6 @@ p {
 }
 .banner__content h1 {
   font-size: clamp(3rem, 6vw, 6rem);
-  font-weight: bold;
-}
-.banner__content h1 span {
-  color: #ff9a1e;
 }
 .banner__content p {
   font-size: 1.8rem;
@@ -555,8 +575,15 @@ p {
 
 .product__cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem;
+}
+@media screen and (max-width: 480px) {
+  .product__cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 2rem;
+  }
 }
 .product__cards .product__item {
   box-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.06);
@@ -589,10 +616,12 @@ p {
   border-radius: 50%;
   width: 20rem;
   height: 20rem;
-  margin: 0 auto 3rem;
-  display: block;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+  margin: 0 auto 3rem;
+  display: block;
 }
 .product__cards .product__item a {
   display: block;
@@ -605,11 +634,9 @@ p {
   margin-bottom: 1rem;
 }
 .product__cards .product__item .item__info h3 {
-  font-weight: 800;
   font-size: 2.5rem;
 }
 .product__cards .product__item .item__info h4 {
-  font-weight: bolder;
   font-size: 2rem;
 }
 .product__cards .product__item .item__info small {
@@ -660,11 +687,18 @@ p {
 
 .booking {
   min-height: 50rem;
-  background-image: url(/img/restaurant.jpg);
+  background-image: url(../img/restaurant.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 5rem, 5rem;
+  background-position-x: 0;
+  background-position-y: -5rem;
   background-size: fill;
+}
+@media screen and (max-width: 480px) {
+  .booking {
+    background-position-x: 0;
+    background-position-y: 0;
+  }
 }
 .booking__content {
   background-color: #ff9a1e;
@@ -676,6 +710,13 @@ p {
   justify-content: flex-start;
   place-items: center;
 }
+@media screen and (max-width: 480px) {
+  .booking__content {
+    padding: 2rem;
+    background-color: rgba(255, 154, 30, 0.6);
+    width: 120%;
+  }
+}
 .booking__content::before {
   content: "";
   position: absolute;
@@ -684,6 +725,11 @@ p {
   height: 100%;
   width: 40vw;
   background-color: #ff9a1e;
+}
+@media screen and (max-width: 480px) {
+  .booking__content::before {
+    background-color: rgba(255, 154, 30, 0.6);
+  }
 }
 .booking__content .inner {
   max-width: 40rem;
@@ -697,7 +743,6 @@ p {
 }
 .booking__content .inner h2 {
   font-size: clamp(3rem, 6vw, 5rem);
-  font-weight: bold;
   margin: 3rem 0;
 }
 .booking__content .inner p {
@@ -706,8 +751,15 @@ p {
 
 .work__wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 4rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 3rem;
+}
+@media screen and (max-width: 480px) {
+  .work__wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3rem;
+  }
 }
 .work__wrapper .work__card {
   padding: 2rem;
@@ -727,7 +779,6 @@ p {
   font-size: 2rem;
   margin: 2rem 0;
   color: #ff9a1e;
-  font-weight: bold;
 }
 .work__wrapper .work__card p {
   opacity: 0.5;
@@ -741,9 +792,25 @@ p {
   border-radius: 3rem;
   display: grid;
   grid-template-columns: 2fr 1fr;
+  grid-gap: 1rem;
   max-height: 44rem;
   height: 100%;
   overflow: hidden;
+}
+@media screen and (max-width: 480px) {
+  .app__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 3rem;
+    padding: 2rem;
+    max-height: 70rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .app__image {
+    text-align: center;
+    margin-top: 5rem;
+  }
 }
 .app__content {
   max-width: 55rem;
@@ -751,11 +818,7 @@ p {
 }
 .app__content h2 {
   font-size: clamp(3rem, 6vw, 5rem);
-  font-weight: bold;
   margin: 4rem 0 3rem;
-}
-.app__content h2 span {
-  color: #ff9a1e;
 }
 .app__content p {
   font-size: 2rem;
@@ -766,8 +829,15 @@ p {
 
 .testimonials__wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
+}
+@media screen and (max-width: 480px) {
+  .testimonials__wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 2rem;
+  }
 }
 .testimonials__card {
   display: grid;
@@ -803,15 +873,16 @@ p {
   border: 5px solid #ff9a1e;
 }
 .testimonials__card .testimonials__img .inner img {
+  width: 10rem;
+  height: 10rem;
   -o-object-fit: cover;
      object-fit: cover;
-  height: 10rem;
-  width: 10rem;
+  -o-object-position: center center;
+     object-position: center center;
   border-radius: 50%;
   transition: 0.5s ease;
 }
 .testimonials__card .testimonials__content h4 {
-  font-weight: bold;
   font-size: 2rem;
   line-height: 1;
 }
@@ -833,12 +904,13 @@ p {
 
 .newsletter {
   min-height: 45rem;
-  background-image: linear-gradient(rgba(45, 45, 45, 0.6), rgba(45, 45, 45, 0.6)), url(/img/restaurant.jpg);
+  background-image: linear-gradient(rgba(45, 45, 45, 0.6), rgba(45, 45, 45, 0.6)), url(../img/restaurant.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 1px;
 }
 .newsletter__wrapper {
   max-width: 75rem;
@@ -848,11 +920,7 @@ p {
   text-align: center;
 }
 .newsletter__wrapper h2 {
-  font-weight: bold;
   font-size: clamp(2rem, 6vw, 5rem);
-}
-.newsletter__wrapper h2 span {
-  color: #ff9a1e;
 }
 .newsletter__wrapper p {
   opacity: 0.8;
@@ -865,7 +933,7 @@ p {
   padding: 0.8rem 1.6rem;
   width: 28rem;
   border: 4px solid #fff;
-  border-radius: 0.5rem 0 0 0.5rem;
+  border-radius: 0.5rem;
   color: #2d2d2d;
 }
 .newsletter__wrapper form input::-moz-placeholder {
@@ -883,6 +951,13 @@ p {
   font-weight: bold;
   transform: translateX(-9px);
   border: 4px solid #fff;
+}
+@media screen and (max-width: 480px) {
+  .newsletter__wrapper form button {
+    width: 28rem;
+    margin-top: 1rem;
+    transform: translateX(0);
+  }
 }
 
 .faq__block {
@@ -903,7 +978,6 @@ p {
 }
 .faq__block .faq__question h3 {
   font-size: 2.5rem;
-  font-weight: bold;
 }
 .faq__block .faq__question i {
   font-size: 1.8rem;
