--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,6 +2,14 @@
 
     &__wrapper{
         min-height: calc(100vh - 60px);
+        @include mediaQuery($mobile){
+            flex-direction: column;
+            min-height: auto;
+            justify-content: flex-start;
+            gap: 5rem;
+            margin-top: 5rem;
+        }
+
     }
 
     &__content{
@@ -11,10 +19,6 @@
         line-height: 1.2;
         h1{
             font-size: clamp(3rem, 6vw, 6rem);
-            font-weight: bold;
-            span{
-                color: $clr-primary;
-            }
         }
         p{
             font-size: 1.8rem;
@@ -34,9 +38,11 @@
     
 
     &__cards{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 2rem;
+        @include grid(4, 2rem);
+        @include mediaQuery($mobile){
+            @include grid(1, 2rem);
+        }
+
 
         .product__item{
             box-shadow: $shadow;
@@ -67,11 +73,9 @@
             }
             img{
                 border-radius: 50%;
-                width: 20rem;
-                height: 20rem;
+                @include imgFit(20rem, 20rem);
                 margin: 0 auto 3rem;
                 display: block;
-                object-fit: cover;
             }
             a{
                 display: block;
@@ -79,16 +83,12 @@
             }
 
             .item__info{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
+                @include centerBetween;
                 margin-bottom: 1rem;
                 h3{
-                    font-weight: 800;
                     font-size: 2.5rem;
                 }
                 h4{
-                    font-weight: bolder;
                     font-size: 2rem;
                 }
                 small{
@@ -121,9 +121,7 @@
 .category__tab {
 
     ul {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        @include centerBetween;
         gap: 1rem;
 
         border-radius: 3rem;
@@ -160,12 +158,26 @@
 
 .booking{
     min-height: 50rem;
-    background-image: url(/img/restaurant.jpg);
+    background-image: url(../img/restaurant.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 5rem, 5rem;
+    background-position-x: 0;
+    background-position-y: -5rem;
     background-size: fill;
+    @include mediaQuery($mobile){
+        
+            background-position-x: 0;
+            background-position-y: 0;
+            
+        
+    }
     &__content{
+        @include mediaQuery($mobile){
+            padding: 2rem;
+            background-color: rgba( $clr-primary, 0.6);
+            width: 120%;
+            
+        }
         background-color: $clr-primary;
         color: $clr-light;
         height: 50rem;
@@ -182,6 +194,9 @@
             height: 100%;
             width: 40vw;
             background-color: $clr-primary;
+            @include mediaQuery($mobile){
+                background-color: rgba( $clr-primary, 0.6);
+            }
         }
         .inner{
             max-width: 40rem;
@@ -195,7 +210,6 @@
             }
             h2{
                 font-size: clamp(3rem, 6vw, 5rem);
-                font-weight: bold;
                 margin: 3rem 0;
             }
             p{
@@ -211,9 +225,11 @@
 .work{
 
     &__wrapper{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 4rem;
+        @include grid(4, 3rem);
+        @include mediaQuery($mobile){
+            @include grid(1, 3rem);
+        }
+
         .work__card{
             padding: 2rem;
             border-radius: 1rem;
@@ -232,8 +248,6 @@
                 font-size: 2rem;
                 margin: 2rem 0;
                 color: $clr-primary;
-                font-weight: bold;
-
             }
             p{
                 opacity:.5;
@@ -252,22 +266,29 @@
         padding: 2rem 10rem;
         background-color: lighten($clr-primary-light, 20%);
         border-radius: 3rem;
-        display: grid;
-        grid-template-columns: 2fr 1fr;
+        @include gridUneven(2fr 1fr, 1rem);
+        @include mediaQuery($mobile){
+            @include gridUneven(1fr, 3rem);
+            padding: 2rem;
+            max-height: 70rem;
+        }
         max-height: 44rem;
         height: 100%;
         overflow: hidden;
+    }
+
+    &__image{
+        @include mediaQuery($mobile){
+            text-align: center;
+            margin-top: 5rem;
+        }
     }
     &__content{
         max-width: 55rem;
         width: 100%;
         h2{
             font-size: clamp(3rem, 6vw, 5rem);
-            font-weight: bold;
             margin: 4rem 0 3rem;
-            span{
-                color: $clr-primary;
-            }
         }
         p{
             font-size: 2rem;
@@ -283,15 +304,13 @@
 .testimonials{
 
     &__wrapper{
-
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 2rem;
+        @include grid(3, 2rem);
+        @include mediaQuery($mobile){
+            @include grid(1, 2rem);
+        }
     }
     &__card{
-        display: grid;
-        grid-template-columns: 1fr 1.8fr;
-        grid-gap: 1rem;
+        @include gridUneven(1fr 1.8fr, 1rem);
         border-radius: 1rem;
         box-shadow: $shadow;
         padding: 1rem;
@@ -320,9 +339,7 @@
                 border-radius: 50%;
                 border: 5px solid $clr-primary;
                 img{
-                    object-fit: cover;
-                    height: 10rem;
-                    width: 10rem;
+                    @include imgFit(10rem, 10rem);
                     border-radius: 50%;
                     transition: .5s ease;
                 }
@@ -331,7 +348,6 @@
         }
         .testimonials__content{
             h4{
-                font-weight: bold;
                 font-size: 2rem;
                 line-height: 1;
             }
@@ -365,12 +381,10 @@
         rgba($clr-dark,0.6),
         rgba($clr-dark,0.6)
         ),
-    url(/img/restaurant.jpg);
+    url(../img/restaurant.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centerAll;
     &__wrapper{
         max-width: 75rem;
         width: 100%;
@@ -378,11 +392,7 @@
         color: $clr-light;
         text-align: center;
         h2{
-            font-weight: bold;
             font-size: clamp(2rem, 6vw, 5rem);
-            span{
-                color: $clr-primary;
-            }
         }
         p{
             opacity: 0.8;
@@ -398,7 +408,7 @@
                 padding: .8rem 1.6rem;
                 width: 28rem;
                 border: 4px solid $clr-light;
-                border-radius: .5rem 0 0 .5rem;
+                border-radius: .5rem;
                 color: $clr-dark;
                 &::placeholder{
                     opacity: .5;
@@ -413,7 +423,11 @@
                 font-weight: bold;
                 transform: translateX(-9px);
                 border: 4px solid $clr-light;
-
+                @include mediaQuery($mobile){
+                    width: 28rem;
+                    margin-top: 1rem;
+                    transform: translateX(0);
+                }
             }
         }
     }
@@ -427,9 +441,7 @@
         box-shadow: $shadow;
         margin-bottom: 4rem;
         .faq__question{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            @include centerBetween;
             padding: 1.5rem 3rem;
             cursor: pointer;
             transition: .5s ease;
@@ -439,7 +451,6 @@
             }
             h3{
                 font-size: 2.5rem;
-                font-weight: bold;
 
             }
             i{
