updated side nav

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,40 @@
 .header{
+    position: relative;
+    @include mediaQuery($mobile){
+        // width: 100%;
+        // position: fixed;
+        top: 0;
+    }
     a{
         font-weight: bold;
+    }
+    .toggle__menu{
+        display: none;
+        @include mediaQuery($mobile){
+            display: block;
+            position: absolute;
+            right: 3rem;
+            transition: .8s ease-in-out;
+        }
+        span{
+            width: 3.5rem;
+            height: .3rem;
+            background-color: $clr-primary;
+            margin-bottom: .5rem;
+            border-radius: 4rem;
+            transition: 1s ease;
+            display: block;
+            position: a;
+        }
+        
+    }
+    .toggle__menu.open{
+        span:first-child{
+            transform: translateX(-1.5rem);
+        }
+        span:nth-child(2){
+            transform: translateX(-0.8rem);
+        }
     }
 
     .branding{
@@ -15,7 +49,25 @@
 
     &__nav{
         @include mediaQuery($mobile){
-            display: none;
+            // display: none;
+            position: absolute; 
+            background-color: $clr-dark;
+            top: 0;
+            right: -100rem;
+            width: 50%;
+            height: 100vh;
+            transition: .7s ease-in-out;
+            ul{
+                flex-direction: column;
+                align-items: flex-start;
+                margin-left: 3rem;
+                margin-top: 5rem;
+            }
+            a{
+                
+            color: $clr-light;
+            }
+            
         }
 
         ul{
@@ -47,6 +99,9 @@
                 }
                 
             }
+        }
+        &.open{
+            right: 0;
         }
     }
 }
