--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,7 +4,7 @@
     }
 
     .branding{
-
+        
         a{
             font-size: 2rem;
             span{
@@ -12,10 +12,56 @@
             }
         }
     }
+    .btn__show{
+        display: none;
+        position: absolute;
+        top: 1rem;
+        right: 3rem;
+        font-size: 3rem;
+        @include mediaQuery($mobile){
+            display: block;
+        }
+    }
+    .btn__back{
+        display: none;
+        @include mediaQuery($mobile){
+            display: block;
+        }
+    }
 
     &__nav{
         @include mediaQuery($mobile){
-            display: none;
+            
+            // display: none;
+            position: fixed;
+            top: 0;
+            right: -350px;
+            height: 100vh;
+            background-color: $clr-light;
+            width: 300px;
+            border-left: 1px solid #ccc;
+            z-index: 999;
+            .btn__back{
+                position: absolute;
+                top: 1rem;
+                right: 4rem;
+                font-size: 3rem;
+
+            }
+            ul{
+                justify-content: flex-end;
+                flex-direction: column;
+                align-items: flex-end;
+                margin-right: 4rem;
+                margin-top: 6rem;
+                li{
+                    margin-bottom: 2rem;
+                    a{
+                        font-size: 2.5rem;
+                    }
+                }
+            }
+            
         }
 
         ul{
@@ -50,3 +96,4 @@
         }
     }
 }
+
