--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700;800&display=swap");
 *:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
   all: unset;
@@ -136,7 +135,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
     flex: 0 0 100%;
   }
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 50rem) {
   .col-sm-1 {
     flex: 0 0 8.3333333333%;
   }
@@ -460,6 +459,9 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   background-color: #141414;
 }
 
+.header {
+  padding: 1.5rem 0;
+}
 .header a {
   font-weight: bold;
 }
@@ -475,21 +477,23 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   top: 1rem;
   right: 3rem;
   font-size: 3rem;
+  cursor: pointer;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .header .btn__show {
     display: block;
   }
 }
 .header .btn__back {
   display: none;
+  cursor: pointer;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .header .btn__back {
     display: block;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .header__nav {
     position: fixed;
     top: 0;
@@ -550,7 +554,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   grid-template-columns: 1.3fr 1fr 1fr 1fr;
   grid-gap: 2rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .footer .footer__wrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -599,7 +603,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
 .banner__wrapper {
   min-height: calc(100vh - 60px);
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .banner__wrapper {
     flex-direction: column;
     min-height: auto;
@@ -630,7 +634,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .product__cards {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -746,7 +750,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   background-position-y: -5rem;
   background-size: fill;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .booking {
     background-position-x: 0;
     background-position-y: 0;
@@ -762,7 +766,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   justify-content: flex-start;
   place-items: center;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .booking__content {
     padding: 2rem;
     background-color: rgba(255, 154, 30, 0.6);
@@ -778,7 +782,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   width: 40vw;
   background-color: #ff9a1e;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .booking__content::before {
     background-color: rgba(255, 154, 30, 0.6);
   }
@@ -806,7 +810,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 3rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .work__wrapper {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -849,7 +853,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   height: 100%;
   overflow: hidden;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .app__wrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -858,7 +862,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
     max-height: 70rem;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .app__image {
     text-align: center;
     margin-top: 5rem;
@@ -884,7 +888,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .testimonials__wrapper {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -1004,7 +1008,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   transform: translateX(-9px);
   border: 4px solid #fff;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .newsletter__wrapper form button {
     width: 28rem;
     margin-top: 1rem;
@@ -1051,7 +1055,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .info__wrapper {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -1076,7 +1080,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .info__wrapper .info__images__variation {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -1131,7 +1135,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   justify-content: space-between;
   align-items: center;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .info__wrapper .info__content__header .prices {
     flex-direction: column;
     align-items: flex-start;
@@ -1263,6 +1267,3 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
   color: #fff;
   font-size: 2rem;
 }/*# sourceMappingURL=main.css.map */
-=======
-@import"https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700;800&display=swap";*:where(:not(iframe,canvas,img,svg,video):not(svg *,symbol *)){all:unset;display:revert}*,*::before,*::after{box-sizing:border-box}a{cursor:revert}ol,ul,menu{list-style:none}img{max-width:100%}table{border-collapse:collapse}textarea{white-space:revert}:where([hidden]){display:none}:where([contenteditable]){-moz-user-modify:read-write;-webkit-user-modify:read-write;overflow-wrap:break-word}:where([draggable=true]){-webkit-user-drag:element}html{font-size:62.5%;height:100%}body{font-family:"Nunito",helvetica sans-serif;font-size:1.6rem;line-height:1.4;color:#2d2d2d}a{color:#2d2d2d;text-decoration:none}p{margin-bottom:1rem}h1,h2,h3,h4,h5,h6{font-weight:bold}h1 span,h2 span,h3 span,h4 span,h5 span,h6 span{color:#ff9a1e}.container{width:100%;max-width:120rem;margin:0 auto;padding:0 1.5rem}.row{display:flex;flex-flow:row wrap}.row>*{max-width:100%;width:100%;padding:.5rem}@media screen and (min-width: 0){.col-xs-1{flex:0 0 8.3333333333%}.col-xs-2{flex:0 0 16.6666666667%}.col-xs-3{flex:0 0 25%}.col-xs-4{flex:0 0 33.3333333333%}.col-xs-5{flex:0 0 41.6666666667%}.col-xs-6{flex:0 0 50%}.col-xs-7{flex:0 0 58.3333333333%}.col-xs-8{flex:0 0 66.6666666667%}.col-xs-9{flex:0 0 75%}.col-xs-10{flex:0 0 83.3333333333%}.col-xs-11{flex:0 0 91.6666666667%}.col-xs-12{flex:0 0 100%}}@media screen and (min-width: 50rem){.col-sm-1{flex:0 0 8.3333333333%}.col-sm-2{flex:0 0 16.6666666667%}.col-sm-3{flex:0 0 25%}.col-sm-4{flex:0 0 33.3333333333%}.col-sm-5{flex:0 0 41.6666666667%}.col-sm-6{flex:0 0 50%}.col-sm-7{flex:0 0 58.3333333333%}.col-sm-8{flex:0 0 66.6666666667%}.col-sm-9{flex:0 0 75%}.col-sm-10{flex:0 0 83.3333333333%}.col-sm-11{flex:0 0 91.6666666667%}.col-sm-12{flex:0 0 100%}}@media screen and (min-width: 72rem){.col-md-1{flex:0 0 8.3333333333%}.col-md-2{flex:0 0 16.6666666667%}.col-md-3{flex:0 0 25%}.col-md-4{flex:0 0 33.3333333333%}.col-md-5{flex:0 0 41.6666666667%}.col-md-6{flex:0 0 50%}.col-md-7{flex:0 0 58.3333333333%}.col-md-8{flex:0 0 66.6666666667%}.col-md-9{flex:0 0 75%}.col-md-10{flex:0 0 83.3333333333%}.col-md-11{flex:0 0 91.6666666667%}.col-md-12{flex:0 0 100%}}@media screen and (min-width: 96rem){.col-lg-1{flex:0 0 8.3333333333%}.col-lg-2{flex:0 0 16.6666666667%}.col-lg-3{flex:0 0 25%}.col-lg-4{flex:0 0 33.3333333333%}.col-lg-5{flex:0 0 41.6666666667%}.col-lg-6{flex:0 0 50%}.col-lg-7{flex:0 0 58.3333333333%}.col-lg-8{flex:0 0 66.6666666667%}.col-lg-9{flex:0 0 75%}.col-lg-10{flex:0 0 83.3333333333%}.col-lg-11{flex:0 0 91.6666666667%}.col-lg-12{flex:0 0 100%}}.d--flex{display:flex}.d--grid{display:grid}.d--block{display:block}.text--primary{color:#ff9a1e}.bg--primary{background-color:#ff9a1e}.text--secondary{color:#feb45a}.bg--secondary{background-color:#feb45a}.text--gray{color:#fff}.bg--gray{background-color:#fff}.text--light{color:#2d2d2d}.bg--light{background-color:#2d2d2d}.text--dark{color:#eaeaea}.bg--dark{background-color:#eaeaea}.mb--1{margin-bottom:1rem}.py--1{padding:1rem 0}.gap--1{gap:1rem}.mb--2{margin-bottom:2rem}.py--2{padding:2rem 0}.gap--2{gap:2rem}.mb--3{margin-bottom:3rem}.py--3{padding:3rem 0}.gap--3{gap:3rem}.mb--4{margin-bottom:4rem}.py--4{padding:4rem 0}.gap--4{gap:4rem}.mb--5{margin-bottom:5rem}.py--5{padding:5rem 0}.gap--5{gap:5rem}.mb--6{margin-bottom:6rem}.py--6{padding:6rem 0}.gap--6{gap:6rem}.text--left{text-align:left}.text--right{text-align:right}.text--center{text-align:center}.justify--start{justify-content:flex-start}.align--start{align-items:flex-start}.justify--end{justify-content:flex-end}.align--end{align-items:flex-end}.justify--between{justify-content:space-between}.align--between{align-items:space-between}.justify--around{justify-content:space-around}.align--around{align-items:space-around}.justify--center{justify-content:center}.align--center{align-items:center}.btn{background-color:#ff9a1e;padding:.8rem 1.8rem;border-radius:3rem;border:1px solid;display:inline-block;transition:.5s ease-in-out}.btn--primary{background-color:#ff9a1e;color:#fff;border-color:#ff9a1e}.btn--primary:hover{background-color:#ea8100}.btn--outline{background-color:rgba(0,0,0,0);color:#ff9a1e;border-color:#ff9a1e}.btn--outline:hover{background-color:#ff9a1e;color:#fff}.btn--dark{background-color:#2d2d2d;color:#fff;border-color:#2d2d2d}.btn--dark:hover{background-color:#141414}.header{position:relative}@media screen and (max-width: 500px){.header{top:0}}.header a{font-weight:bold}.header .toggle__menu{display:none}@media screen and (max-width: 500px){.header .toggle__menu{display:block;position:absolute;right:3rem;transition:.8s ease-in-out}}.header .toggle__menu span{width:3.5rem;height:.3rem;background-color:#ff9a1e;margin-bottom:.5rem;border-radius:4rem;transition:1s ease;display:block;position:a}.header .toggle__menu.open span:first-child{transform:translateX(-1.5rem)}.header .toggle__menu.open span:nth-child(2){transform:translateX(-0.8rem)}.header .branding a{font-size:2rem}.header .branding a span{color:#ff9a1e}@media screen and (max-width: 500px){.header__nav{position:absolute;background-color:#2d2d2d;top:0;right:-100rem;width:50%;height:100vh;transition:.7s ease-in-out}.header__nav ul{flex-direction:column;align-items:flex-start;margin-left:3rem;margin-top:5rem}.header__nav a{color:#fff}}.header__nav ul li a{position:relative}.header__nav ul li a::after{content:"";position:absolute;width:100%;height:2px;background-color:#ff9a1e;left:0;bottom:-0.5rem;opacity:0;transition:.5s ease-in-out}.header__nav ul li a.active::after{opacity:1}.header__nav ul li a:hover::after{opacity:1}.header__nav.open{right:0}.footer{background-color:#2d2d2d;color:#fff}.footer .footer__wrapper{display:grid;grid-template-columns:1.3fr 1fr 1fr 1fr;grid-gap:2rem}@media screen and (max-width: 500px){.footer .footer__wrapper{display:grid;grid-template-columns:1fr;grid-gap:2rem}}.footer .footer__wrapper .footer__item h3{text-transform:uppercase;margin-bottom:3rem;font-size:1.8rem}.footer .footer__wrapper .footer__item p{width:80%}.footer .footer__wrapper .footer__item ul li{margin-bottom:1.6rem}.footer .footer__wrapper .footer__item ul li a{color:#fff}.copyright{background-color:#2d2d2d;text-align:center;color:#ff9a1e;padding:.5rem 0}.block__header{text-align:center;margin-bottom:4rem}.block__header span{color:#ff9a1e;text-transform:uppercase}.block__header h2{font-size:clamp(2rem,5vw,3.5rem);font-weight:bolder}.block__header h2 span{text-transform:capitalize;font-weight:bold}.banner__wrapper{min-height:calc(100vh - 60px)}@media screen and (max-width: 500px){.banner__wrapper{flex-direction:column;min-height:auto;justify-content:flex-start;gap:5rem;margin-top:5rem}}.banner__content{max-width:50rem;width:100%;margin-bottom:2rem;line-height:1.2}.banner__content h1{font-size:clamp(3rem,6vw,6rem)}.banner__content p{font-size:1.8rem;margin-bottom:4rem}.banner__content a:last-child{margin-left:2rem}.product__cards{display:grid;grid-template-columns:repeat(4, 1fr);grid-gap:2rem}@media screen and (max-width: 500px){.product__cards{display:grid;grid-template-columns:repeat(1, 1fr);grid-gap:2rem}}.product__cards .product__item{box-shadow:2px 2px 12px 2px rgba(0,0,0,.06);padding:1.5rem 2rem;border-radius:1rem;position:relative;overflow:hidden}.product__cards .product__item::before{content:"";position:absolute;top:0;left:0;width:0;height:0;background-color:#ff9a1e;z-index:-1;transition:.5s ease}.product__cards .product__item:hover::before{width:50%;height:15rem}.product__cards .product__item:hover a{background-color:#ff9a1e;color:#fff;transition:.5s ease}.product__cards .product__item img{border-radius:50%;width:20rem;height:20rem;-o-object-fit:cover;object-fit:cover;-o-object-position:center center;object-position:center center;margin:0 auto 3rem;display:block}.product__cards .product__item a{display:block;text-align:center}.product__cards .product__item .item__info{display:flex;justify-content:space-between;align-items:center;margin-bottom:1rem}.product__cards .product__item .item__info h3{font-size:2.5rem}.product__cards .product__item .item__info h4{font-size:2rem}.product__cards .product__item .item__info small{font-weight:bold;font-size:1.2rem;opacity:.3}.product__cards .product__item .item__review h4{font-size:1.4rem}.product__cards .product__item .item__review h4 i{color:#ff9a1e}.product__item.reverse::before{left:unset;right:0}.category__tab ul{display:flex;justify-content:space-between;align-items:center;gap:1rem;border-radius:3rem;box-shadow:2px 2px 12px 2px rgba(0,0,0,.06);max-width:43rem;width:100%;margin:0 auto 6rem}.category__tab ul li{min-width:7rem}.category__tab ul li a{display:block;padding:1rem;text-align:center;border-radius:3rem}.category__tab ul li a:hover{background-color:#ff9a1e;color:#fff}.category__tab ul li.active a{background-color:#ff9a1e;color:#fff}.booking{min-height:50rem;background-image:url(../img/restaurant.jpg);background-repeat:no-repeat;background-size:cover;background-position-x:0;background-position-y:-5rem;background-size:fill}@media screen and (max-width: 500px){.booking{background-position-x:0;background-position-y:0}}.booking__content{background-color:#ff9a1e;color:#fff;height:50rem;width:50%;position:relative;display:grid;justify-content:flex-start;place-items:center}@media screen and (max-width: 500px){.booking__content{padding:2rem;background-color:rgba(255,154,30,.6);width:120%}}.booking__content::before{content:"";position:absolute;right:100%;top:0;height:100%;width:40vw;background-color:#ff9a1e}@media screen and (max-width: 500px){.booking__content::before{background-color:rgba(255,154,30,.6)}}.booking__content .inner{max-width:40rem;width:100%}.booking__content .inner small{color:#2d2d2d;text-transform:uppercase;font-weight:800;font-size:1.8rem}.booking__content .inner h2{font-size:clamp(3rem,6vw,5rem);margin:3rem 0}.booking__content .inner p{margin-bottom:3rem}.work__wrapper{display:grid;grid-template-columns:repeat(4, 1fr);grid-gap:3rem}@media screen and (max-width: 500px){.work__wrapper{display:grid;grid-template-columns:repeat(1, 1fr);grid-gap:3rem}}.work__wrapper .work__card{padding:2rem;border-radius:1rem;box-shadow:2px 2px 12px 2px rgba(0,0,0,.06);text-align:center;transition:.5s ease}.work__wrapper .work__card:hover{transform:scale(1.2)}.work__wrapper .work__card i{color:#ff9a1e;font-size:3rem}.work__wrapper .work__card h3{font-size:2rem;margin:2rem 0;color:#ff9a1e}.work__wrapper .work__card p{opacity:.5;font-size:1.6rem;font-weight:bold}.app__wrapper{padding:2rem 10rem;background-color:#ffe2bf;border-radius:3rem;display:grid;grid-template-columns:2fr 1fr;grid-gap:1rem;max-height:44rem;height:100%;overflow:hidden}@media screen and (max-width: 500px){.app__wrapper{display:grid;grid-template-columns:1fr;grid-gap:3rem;padding:2rem;max-height:70rem}}@media screen and (max-width: 500px){.app__image{text-align:center;margin-top:5rem}}.app__content{max-width:55rem;width:100%}.app__content h2{font-size:clamp(3rem,6vw,5rem);margin:4rem 0 3rem}.app__content p{font-size:2rem;opacity:.5;margin-bottom:4rem;font-weight:bold}.testimonials__wrapper{display:grid;grid-template-columns:repeat(3, 1fr);grid-gap:2rem}@media screen and (max-width: 500px){.testimonials__wrapper{display:grid;grid-template-columns:repeat(1, 1fr);grid-gap:2rem}}.testimonials__card{display:grid;grid-template-columns:1fr 1.8fr;grid-gap:1rem;border-radius:1rem;box-shadow:2px 2px 12px 2px rgba(0,0,0,.06);padding:1rem;position:relative}.testimonials__card:hover img{transform:scale(1.2)}.testimonials__card::before{position:absolute;content:"";width:7rem;height:7rem;border-radius:50%;background-color:#ff9a1e;top:15px;left:15px;z-index:-1}.testimonials__card .testimonials__img{padding:1rem}.testimonials__card .testimonials__img .inner{width:10.5rem;height:11rem;overflow:hidden;border-radius:50%;border:5px solid #ff9a1e}.testimonials__card .testimonials__img .inner img{width:10rem;height:10rem;-o-object-fit:cover;object-fit:cover;-o-object-position:center center;object-position:center center;border-radius:50%;transition:.5s ease}.testimonials__card .testimonials__content h4{font-size:2rem;line-height:1}.testimonials__card .testimonials__content small{font-size:1.2rem;opacity:.5}.testimonials__card .testimonials__content ul{display:flex;gap:.5rem;margin:.5rem 0}.testimonials__card .testimonials__content ul li i{color:#ff9a1e}.testimonials__card .testimonials__content p{opacity:.8}.newsletter{min-height:45rem;background-image:linear-gradient(rgba(45, 45, 45, 0.6), rgba(45, 45, 45, 0.6)),url(../img/restaurant.jpg);background-repeat:no-repeat;background-size:cover;display:flex;justify-content:center;align-items:center;min-height:1px}.newsletter__wrapper{max-width:75rem;width:100%;margin:0 auto;color:#fff;text-align:center}.newsletter__wrapper h2{font-size:clamp(2rem,6vw,5rem)}.newsletter__wrapper p{opacity:.8;margin:2rem 0;font-size:2rem}.newsletter__wrapper form input{text-align:left;background-color:#fff;padding:.8rem 1.6rem;width:28rem;border:4px solid #fff;border-radius:.5rem;color:#2d2d2d}.newsletter__wrapper form input::-moz-placeholder{opacity:.5}.newsletter__wrapper form input::placeholder{opacity:.5}.newsletter__wrapper form button{cursor:pointer;background-color:#ff9a1e;padding:.8rem 5rem;border-radius:.5rem;color:#2d2d2d;font-weight:bold;transform:translateX(-9px);border:4px solid #fff}@media screen and (max-width: 500px){.newsletter__wrapper form button{width:28rem;margin-top:1rem;transform:translateX(0)}}.faq__block{border-radius:2rem;box-shadow:2px 2px 12px 2px rgba(0,0,0,.06);margin-bottom:4rem}.faq__block .faq__question{display:flex;justify-content:space-between;align-items:center;padding:1.5rem 3rem;cursor:pointer;transition:.5s ease}.faq__block .faq__question.open i{transform:rotate(45deg)}.faq__block .faq__question h3{font-size:2.5rem}.faq__block .faq__question i{font-size:1.8rem;transition:.3s ease}.faq__block .faq__answer{padding:.5rem 3rem;height:auto;max-height:0rem;transition:max-height .5s ease;overflow:hidden}.faq__block .faq__answer.open{max-height:50rem}/*# sourceMappingURL=main.css.map */
->>>>>>> 4677cebbcf9f4b0b3a56086e4ac557b084e3b63b
